# retarus-python-sms

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 01_bug.md
.github/workflows/: cd.yml  ci.yaml  python_sdk.yaml  release.yaml
examples/: README.md  requirements.txt  send_job_sync.py  send_jobs_async.py  send_jobs_sync.py
examples/assets/: sms_data.csv
examples/bulk_sender/: README.md  main.py  requirements.txt
examples/bulk_sender/assets/: sms_data.csv
examples/sms/: get_status_async.py  requirements.txt  send_jobs_async.py
examples/sms/bulk_sender/: main.py  requirements.txt
retarus/sms/: _async.py  client.py  model.py  sync.py
tests/: test.py
