[project]
name = "retarus-sms"
dynamic = ["readme", "dependencies"]
version = "0.1.0"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name="Retarus GmbH", email = "Developers@retarus.com"},
]
description=  "The official client SDK for easy implementation of Retarus sms services."

[project.urls]
repository = "https://github.com/retarus/retarus-python"


[tool.setuptools.dynamic]
#version = {file = "VERSION"}
readme = {file = ["README.md"]}
dependencies = {file = "requirements.txt"}

[build-system]
requires = ["setuptools-scm", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"
